[gd_scene load_steps=3 format=3 uid="uid://bo0m7n7hbk52n"]

[ext_resource type="Script" path="res://popups/bug_report/bug_report.gd" id="1_jcv6k"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l1axt"]
content_margin_left = 14.0
content_margin_top = 14.0
content_margin_right = 14.0
content_margin_bottom = 14.0
bg_color = Color(0.207843, 0.207843, 0.207843, 1)

[node name="BugReport" type="Window"]
title = "Bug report"
initial_position = 2
size = Vector2i(650, 650)
exclusive = true
keep_title_visible = true
script = ExtResource("1_jcv6k")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_l1axt")

[node name="VBox" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="ContactHBox" type="HBoxContainer" parent="PanelContainer/VBox"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="ContactLabel" type="Label" parent="PanelContainer/VBox/ContactHBox"]
layout_mode = 2
text = "E-mail or discord name (not necessary)"

[node name="ContactLineEdit" type="LineEdit" parent="PanelContainer/VBox/ContactHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="DescLabel" type="Label" parent="PanelContainer/VBox"]
layout_mode = 2
text = "Bug description:"

[node name="DescTextEdit" type="TextEdit" parent="PanelContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="ButtonsHBox" type="HBoxContainer" parent="PanelContainer/VBox"]
layout_mode = 2
alignment = 2

[node name="CancelButton" type="Button" parent="PanelContainer/VBox/ButtonsHBox"]
layout_mode = 2
text = "Cancel"

[node name="SubmitButton" type="Button" parent="PanelContainer/VBox/ButtonsHBox"]
layout_mode = 2
text = "Submit"

[connection signal="about_to_popup" from="." to="." method="_on_about_to_popup"]
[connection signal="pressed" from="PanelContainer/VBox/ButtonsHBox/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBox/ButtonsHBox/SubmitButton" to="." method="_on_submit_button_pressed"]
